add: add custom checkbox in lib

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,5 @@
 @import url('./parts/_link.css');
 @import url('./parts/_tooltip.css');
 @import url('./parts/_dropdown.css');
+@import url('./parts/_checkbox.css');
+@import url('./parts/_switch.css');
