add: add simple field and field with icon

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,4 @@
 @import url('./parts/_dropdown.css');
 @import url('./parts/_checkbox.css');
 @import url('./parts/_switch.css');
+@import url('./parts/_field.css')
